# focalpoint

./: .gitignore
client/: index.html  package.json
client/src/: main.ts
server/: Cargo.toml
server/src/: error.rs  main.rs  peer.rs  routes.rs  signal.rs  state.rs  states.rs
server/tests/: websocket_integration.rs
